RESOLVED FIXED 275188
After closing a modal <dialog>, elements can be z-ordered incorrectly
https://bugs.webkit.org/show_bug.cgi?id=275188
Summary After closing a modal <dialog>, elements can be z-ordered incorrectly
Simon Fraser (smfr)
Reported 2024-06-05 17:33:14 PDT
After calling dialog.close(), sometimes elements on the page are painted in the wrong z-order.
Attachments
Simon Fraser (smfr)
Comment 1 2024-06-05 17:33:27 PDT
Simon Fraser (smfr)
Comment 2 2024-06-05 17:36:07 PDT
EWS
Comment 3 2024-06-06 16:53:11 PDT
Committed 279785@main (4fef6aeb8718): <https://commits.webkit.org/279785@main> Reviewed commits have been landed. Closing PR #29564 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.